--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         <h1>¡Feliz Cumpleaños, Amor!</h1>
         <p>Hola mi püa, quiero que sepas que este cumpleaños será inolvidable... He organizado una sorpresa especial para ti, ¡y solo tú puedes decidir a dónde iremos!</p>
         <div class="button-container">
-            <button onclick="selectDestination('playa')">Playa Magüipi</button>
-            <button onclick="selectDestination('quindio')">Puebleando en Quindío</button>
-            <button onclick="selectDestination('ukumari')">Consotá + Ukumari</button>
+            <img src="./images/sn.jpg" alt="foto" width="300px">   
+            <button onclick="selectDestination('playa')">Destino A</button>
+            <button onclick="selectDestination('quindio')">Destino B</button>
+            <button onclick="selectDestination('ukumari')">Destino C</button>
         </div>
         <div id="destination-info" class="info"></div>
         <!-- Botón de confirmación -->
